Bug 1768907 - Part 1: Make browser.privatebrowsing.autostart a static pref. r=handyman,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D157843