toolkit/components/windowwatcher/nsWindowWatcher.cpp
@@ -62,6 +62,7 @@
 #include "mozilla/NullPrincipal.h"
 #include "mozilla/Preferences.h"
 #include "mozilla/ResultExtensions.h"
+#include "mozilla/StaticPrefs_browser.h"
 #include "mozilla/StaticPrefs_full_screen_api.h"
 #include "mozilla/dom/Element.h"
 #include "mozilla/dom/Storage.h"
@@ -494,7 +495,7 @@ nsWindowWatcher::OpenWindowWithRemoteTab(nsIRemoteTab* aRemoteTab,
 
   bool isFissionWindow = FissionAutostart();
   bool isPrivateBrowsingWindow =
-      Preferences::GetBool("browser.privatebrowsing.autostart");
+      StaticPrefs::browser_privatebrowsing_autostart();
 
   nsCOMPtr<nsPIDOMWindowOuter> parentWindowOuter;
   RefPtr<BrowsingContext> parentBC = aOpenWindowInfo->GetParent();
@@ -1166,7 +1167,7 @@ nsresult nsWindowWatcher::OpenWindowInternal(
             targetBC->OriginAttributesRef()));
 
     bool autoPrivateBrowsing =
-        Preferences::GetBool("browser.privatebrowsing.autostart");
+        StaticPrefs::browser_privatebrowsing_autostart();
 
     if (!autoPrivateBrowsing &&
         (chromeFlags & nsIWebBrowserChrome::CHROME_NON_PRIVATE_WINDOW)) {
